--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 ### IntelliJ IDEA ###
+.idea/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+*.iml
+*.ipr
+*.iws
 
 ### Eclipse ###
 .apt_generated
@@ -27,3 +31,38 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+### Windows ###
+Thumbs.db
+
+### Java ###
+# Compiled files
+classes/
+*.class
+*.jar
+*.war
+*.ear
+
+# Build directories
+target/
+build/
+
+# Logs
+logs/
+*.log
+log/
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# OS generated files
+*.swp
+*.swo
+*~
